testsuite/resolution/compile-fail/new-expr.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class A {}
interface I {}
primitive P {}

class Main
{
  main()
  {
    var x;
    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: x is not a class
    new x;

    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: x is not a class
    new x in x;

    // CHECK-L: new-expr.verona:${LINE:+1}:14: error: A is not a local variable
    new A in A;

    // CHECK-L: new-expr.verona:${LINE:+2}:9: error: x is not a class
    // CHECK-L: new-expr.verona:${LINE:+1}:14: error: A is not a local variable
    new x in A;

    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: Cannot find value for symbol 'B'
    new B;

    // CHECK-L: new-expr.verona:${LINE:+1}:14: error: Cannot find value for symbol 'y'
    new A in y;

    // CHECK-L: new-expr.verona:${LINE:+2}:9: error: Cannot find value for symbol 'B'
    // CHECK-L: new-expr.verona:${LINE:+1}:14: error: Cannot find value for symbol 'y'
    new B in y;

    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: I is not a class
    new I;

    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: I is not a class
    new I in x;

    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: P is not a class
    new P;

    // CHECK-L: new-expr.verona:${LINE:+1}:9: error: P is not a class
    new P in x;
  }
}

// Make sure we don't have unexpected errors.
// CHECK-L: 13 errors generated
